--- a/src/components/WeatherApp/WeatherApp.css
+++ b/src/components/WeatherApp/WeatherApp.css
@@ -38,3 +38,53 @@
     border-radius: 40px;
     cursor: pointer;
 }
+
+.weather-image {
+    margin: 29px;
+    display: flex;
+    justify-content: center;
+}
+
+.weather-temp {
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    font-size: 120px;
+    font-weight: 400;
+}
+
+.weather-location {
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    font-size: 60px;
+    font-weight: 400;
+}
+
+.data-container {
+    margin: 50px;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+}
+
+.element {
+    margin: auto;
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+.data {
+    font-size: 34px;
+    font-weight: 400;
+}
+
+.text {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.icon {
+    margin-top: 10px;
+}
